# aMusic

./: .editorconfig  .env  .env.example  README.md  justfile  pubspec.yaml
.github/workflows/: main.yml  release.yml
android/app/: build.gradle
ios/: Podfile
ios/Runner/: Info.plist  bridge_generated.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  bridge_generated.io.dart  bridge_generated.web.dart  init.dart  main.dart  no_transition.dart  resolving_audio_source.dart  router.dart  theme.dart
lib/consts/: key.dart
lib/extensions/: datetime.dart  duration.dart  theme_mode.dart
lib/layout/: home.dart
lib/mock/: recommand_list_data.dart  song_list_data.dart
lib/models/: config.dart  config.g.dart  lyric.dart  lyric.g.dart  player.dart  player.g.dart  playlist.dart  song.dart  song.g.dart
lib/providers/: config.dart  config.g.dart  player.dart  player.g.dart  router.dart  router.g.dart  user.dart  user.g.dart
lib/screen/: current_list.dart  login.dart  no_found.dart  search.dart  setting.dart  song_list.dart  splash.dart  user_playlist.dart
lib/utils/: repo.dart  storage.dart
lib/widgets/: equalizer_controls.dart  image_cover.dart  lyric_list.dart  menu_item.dart  music_item.dart  music_player.dart  playlist_cover_item.dart  (+2 more)
linux/: CMakeLists.txt  my_application.cc
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+11 files in other folders)
