[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
flutter_rust_bridge = "1"
ncmapi = { git = "https://github.com/gmg137/netease-cloud-music-api.git", tag = "1.3.0", package = "netease-cloud-music-api" }
